--- a/index_arquivos/OUTROS/1 - Copia.html
+++ b/index_arquivos/OUTROS/1 - Copia.html
@@ -212,6 +212,18 @@ document.write('  '+todaysDate);
 <!--##############################################################################-->
 <!---------------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------------->
+<p><a href="MEUS SITES/1 - Copia.html" target="_self">
+<div height="100" style="background-color: blue;line-height: 50px;text-align: center;"><x style="color: white"><FONT SIZE=+2>MEUS SITES</FONT></x></div></a></p>
+<!---------------------------------------------------------------------------------->
+<p><a href="NOME⚫/1 - Copia.html" target="_self">
+<div height="100" style="background-color: blue;line-height: 50px;text-align: center;"><x style="color: white"><FONT SIZE=+2>NOME⚫</FONT></x></div></a></p>
+<!---------------------------------------------------------------------------------->
+<p><a href="NOME⚫/1 - Copia.html" target="_self">
+<div height="100" style="background-color: blue;line-height: 50px;text-align: center;"><x style="color: white"><FONT SIZE=+2>NOME⚫</FONT></x></div></a></p>
+<!---------------------------------------------------------------------------------->
+<p><a href="NOME⚫/1 - Copia.html" target="_self">
+<div height="100" style="background-color: blue;line-height: 50px;text-align: center;"><x style="color: white"><FONT SIZE=+2>NOME⚫</FONT></x></div></a></p>
+<!---------------------------------------------------------------------------------->
 <p><a href="NOME⚫/1 - Copia.html" target="_self">
 <div height="100" style="background-color: blue;line-height: 50px;text-align: center;"><x style="color: white"><FONT SIZE=+2>NOME⚫</FONT></x></div></a></p>
 <!---------------------------------------------------------------------------------->
