--- a/index_arquivos/OUTROS/MEUS SITES/1 - Copia.html
+++ b/index_arquivos/OUTROS/MEUS SITES/1 - Copia.html
@@ -211,17 +211,17 @@ document.write('  '+todaysDate);
 <!--##############################################################################-->
 <!--##############################################################################-->
 <!---------------------------------------------------------------------------------->
-<!---------------------------------------------------------------------------------->
-<p><a href="https://jbmsantos0398.github.io/SANTOS2/" target="_self">
+<!-------------------------------- _blank --- _self ----------------------------------->
+<p><a href="https://jbmsantos0398.github.io/SANTOS2/" target="_blank">
 <div height="100" style="background-color: blue;line-height: 50px;text-align: center;"><x style="color: white"><FONT SIZE=+2>SANTOS2</FONT></x></div></a></p>
 <!---------------------------------------------------------------------------------->
-<p><a href="NOME⚫/1 - Copia.html" target="_self">
+<p><a href="NOME⚫/1 - Copia.html" target="_blank">
 <div height="100" style="background-color: blue;line-height: 50px;text-align: center;"><x style="color: white"><FONT SIZE=+2>NOME⚫</FONT></x></div></a></p>
 <!---------------------------------------------------------------------------------->
-<p><a href="NOME⚫/1 - Copia.html" target="_self">
+<p><a href="NOME⚫/1 - Copia.html" target="_blank">
 <div height="100" style="background-color: blue;line-height: 50px;text-align: center;"><x style="color: white"><FONT SIZE=+2>NOME⚫</FONT></x></div></a></p>
 <!---------------------------------------------------------------------------------->
-<p><a href="NOME⚫/1 - Copia.html" target="_self">
+<p><a href="NOME⚫/1 - Copia.html" target="_blank">
 <div height="100" style="background-color: blue;line-height: 50px;text-align: center;"><x style="color: white"><FONT SIZE=+2>NOME⚫</FONT></x></div></a></p>
 <!---------------------------------------------------------------------------------->
 
@@ -231,7 +231,7 @@ document.write('  '+todaysDate);
 
 
 <!-----------------------------------------
-<p><a href="NOME⚫/1 - Copia.html" target="_self">
+<p><a href="NOME⚫/1 - Copia.html" target="_blank">
 <div height="100" style="background-color: blue;line-height: 50px;text-align: center;"><x style="color: white"><FONT SIZE=+2>NOME⚫</FONT></x></div></a></p>
 <!---------------------------------------------------------------------------------->
 
