--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ﻿<meta charset="utf-8"><!DOCTYPE html><html lang="pt-br">
 <head><title>NOVO SITE LINK 28-02-24</title>
-<link rel="sortcut icon" href="https://play-lh.googleusercontent.com/Eg2J_wqPzi774STTViPADmIpLt1RDNnUBJpnQDiIqw7NiNWBnsIB7knRIBJOVXJzbsY" type="image/gif" />
+<link rel="sortcut icon" href="https://cdn-icons-png.flaticon.com/256/9073/9073168.png" type="image/gif" />
 <link href="CSS🔴.css" rel="stylesheet">
 <link rel="stylesheet" href="CSS🔴.css">
 <meta name="viewport" content="width=device-width, initial-scale=1">
