--- a/index.html
+++ b/index.html
@@ -1,35 +1,19 @@
 ﻿<meta charset="utf-8"><!DOCTYPE html><html lang="pt-br">
-<head><title>NOVO SITE LINK 28-02-24</title>
+<head><title>GERAL</title>
 <link rel="sortcut icon" href="https://cdn-icons-png.flaticon.com/256/9073/9073168.png" type="image/gif" />
 <link href="CSS🔴.css" rel="stylesheet">
 <link rel="stylesheet" href="CSS🔴.css">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="author" content="santos.12164@hotmail.com">
-<meta name="description" content="NOVO SITE LINK 28-02-24">
-<meta name="keywords" content="NOVO SITE LINK 28-02-24">
+<meta name="description" content="GERAL">
+<meta name="keywords" content="GERAL">
 </head><body><style>
 img {
     max-width: 100%;
 }
-<!----------------------------------------------------------->
-a:link{
-text-decoration:none;
-color:black;
-}
-a:visited{
-text-decoration:none;
-color:blue;
-}
-a:hover{
-text-decoration:none;
-color:#01DF01;
-}
-a:active{
-text-decoration:none;
-color:green;
-}
 </style><body bgcolor="linen"></body>
 <!---------------------------------
+GERAL - filmessantosgithub
 <body bgcolor="linen"></body>
 <body bgcolor="#d0e4fe"></body>
 <FONT COLOR="#ffffff">NOME⚫</FONT>
