--- a/index.html
+++ b/index.html
@@ -219,6 +219,22 @@ document.getElementById('piscando').style.opacity = '0';
  | Contém conteúdo adulto, <FONT COLOR="red"><b>proibido para menores de 18 anos</b></FONT>.
 </marquee>
 <!---------------------------------------------------------------------------------->
+<!------------------------_blank --- _self ------------------------->
+<center><!DOCTYPE html><html><head>
+<meta name="viewport" content="width=device-width, initial-scale=1.0"><style>
+img {
+  max-width: 100%;
+  height: auto;
+}
+</style></head><body><p><a href="
+index_arquivos/IMAGENS/qrcode_fsgithu.github.io.png
+" target="_blank"><img src="index_arquivos/IMAGENS/qrcode_fsgithu.github.io.png" width="100" height="100"></a></p></body></html></center>
+<!-------------------------------------------------------------->
+
+
+
+
+
 
 
 
@@ -251,7 +267,7 @@ document.getElementById('piscando').style.opacity = '0';
 
 <footer class="w3-container w3-padding-32 w3-light-grey w3-center">
   <h4>Santos - 22:42 05/08/2025</h4>
-  <a href="#top" class="w3-button w3-black w3-margin"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
+  <a href="#top" class="w3-button w3-black w3-margin"><i class="fa fa-arrow-up w3-margin-right"></i>TOPO</a>
   <div class="w3-xlarge w3-section">
 
 
@@ -549,7 +565,7 @@ https://wa.me/+5585988885153?text=SANTOS%20QUERO%20DIZER%20QUE%20
 ">Whatsapp.</a></p></center>
 <!-------------------------------
 <HR WIDTH="20%" NOSHADE SIZE="5" color="#00ff00">
-<!----------------------------------------------------------->
+<!-------------------------------
 <BR/><BR/><BR/>
 <!---------------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------------->
